2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* lib/app-help/help.tcl (app-help::run): Catching errors
	  generating when trying to cache a new file in the
	  starkit/pack. Application ight be set read-only instead of
	  transparent.

2003-03-13  Andreas Kupries  <andreask@activestate.com>

	* WRAPPING.txt: Clarified that an installed tcllib cannot be used.

	* README.txt: Extended a bit to explain the application.

	* lib/app-assemble/assemble.tcl: Made assemble more robust when
	  used with unuseable versions of tcllib.

2003-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* lib/app-assemble/assemble.tcl: Added the subcommand 'assemble'
	* lib/app-assemble/pkgIndex.tcl: described in 'WRAPPING.txt'.

	* Initial import of the doctools processor.